Added Binary Tree; Renamed TreeNode to BinaryTreeNode since it makes more sense

--- a/Caldast.AlgoLife.UnitTests/Caldast.AlgoLife.UnitTests.csproj
+++ b/Caldast.AlgoLife.UnitTests/Caldast.AlgoLife.UnitTests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ArrayProblemsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringOperationTest.cs" />
+    <Compile Include="Tree\BinaryTreeTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
