--- a/Caldast.AlgoLife/Caldast.AlgoLife.csproj
+++ b/Caldast.AlgoLife/Caldast.AlgoLife.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Recursion\CoinGame.cs" />
     <Compile Include="Tree\BinaryTree.cs" />
     <Compile Include="Tree\BinaryTreeNode.cs" />
+    <Compile Include="Tree\BSTOperation.cs" />
+    <Compile Include="Tree\BSTTreeOperation.cs" />
     <Compile Include="Tree\RedBlackTree.cs" />
     <Compile Include="Sorting_Searching\BubbleSort.cs" />
     <Compile Include="Sorting_Searching\BucketSort.cs" />
@@ -85,7 +87,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tree\PreOrderTraversal.cs" />
-    <Compile Include="Tree\TreeOperation.cs" />
     <Compile Include="Tree\TreeProblems.cs" />
     <Compile Include="Trie\Trie.cs" />
   </ItemGroup>
