--- a/Caldast.AlgoLife.UnitTests/Caldast.AlgoLife.UnitTests.csproj
+++ b/Caldast.AlgoLife.UnitTests/Caldast.AlgoLife.UnitTests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E17E0F24-EF2A-423C-8335-1E10EB8A35AD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTestProject1</RootNamespace>
-    <AssemblyName>UnitTestProject1</AssemblyName>
+    <RootNamespace>Caldast.AlgoLife.UnitTests</RootNamespace>
+    <AssemblyName>Caldast.AlgoLife.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -48,12 +48,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DynamicProgramming\CutRodTests.cs" />
+    <Compile Include="DynamicProgramming\KnapSackTests.cs" />
     <Compile Include="GraphUnitTests.cs" />
     <Compile Include="MyQueueTests.cs" />
     <Compile Include="MyStackTests.cs" />
     <Compile Include="NumberProblems.cs" />
     <Compile Include="ArrayProblemsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sorting_Searching\MergeSortTests.cs" />
+    <Compile Include="Sorting_Searching\QuickSortTests.cs" />
+    <Compile Include="Sorting_Searching\SelectionSortTests.cs" />
     <Compile Include="StringOperationTest.cs" />
     <Compile Include="Tree\BinaryTreeTests.cs" />
   </ItemGroup>
