a) GetValidIpAddresses b) Convert Base c) Reverse words

--- a/Caldast.AlgoLife/Caldast.AlgoLife.csproj
+++ b/Caldast.AlgoLife/Caldast.AlgoLife.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Tree\TreeProblems.cs" />
     <Compile Include="Trie\Trie.cs" />
     <Compile Include="DynamicProgramming\WordBreak.cs" />
+    <Compile Include="DynamicProgramming\MatrixChainMultiplication.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
