--- a/Caldast.AlgoLife.UnitTests/Caldast.AlgoLife.UnitTests.csproj
+++ b/Caldast.AlgoLife.UnitTests/Caldast.AlgoLife.UnitTests.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Caldast.AlgoLife.UnitTests</RootNamespace>
     <AssemblyName>Caldast.AlgoLife.UnitTests</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">15.0</VisualStudioVersion>
@@ -19,6 +19,7 @@
     <TestProjectType>UnitTest</TestProjectType>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -63,6 +64,8 @@
     <Compile Include="Sorting_Searching\QuickSortTests.cs" />
     <Compile Include="Sorting_Searching\SelectionSortTests.cs" />
     <Compile Include="StringOperationTest.cs" />
+    <Compile Include="Strings\KMPTests.cs" />
+    <Compile Include="Strings\RabinKarpTests.cs" />
     <Compile Include="Tree\BinaryTreeTests.cs" />
   </ItemGroup>
   <ItemGroup>
