Dutch National Flag problem added

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /Caldest.CSharpConcepts
 /Caldast.AlgoLife.DesignPatterns/obj/Release
 /Caldast.OODesignProblems/Program.cs
+/Caldast.OODesignProblems/obj/Release
