--- a/Caldast.AlgoLife/Caldast.AlgoLife.csproj
+++ b/Caldast.AlgoLife/Caldast.AlgoLife.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Arrays\ArrayListTemp.cs" />
     <Compile Include="Arrays\ArrayProblems.cs" />
+    <Compile Include="Arrays\DutchNationalFlag.cs" />
     <Compile Include="Arrays\Permutation.cs" />
     <Compile Include="Strings\KMP.cs" />
     <Compile Include="Strings\RabinKarp.cs" />
