--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /Caldast.AlgoLife.DesignPatterns/obj/Release
 /Caldast.OODesignProblems/Program.cs
 /Caldast.OODesignProblems/obj/Release
+/Caldast.OODesignProblems/Caldast.OODesignProblems.csproj.user
