--- a/Caldast.AlgoLife.DesignPatterns/Caldast.AlgoLife.DesignPatterns.csproj
+++ b/Caldast.AlgoLife.DesignPatterns/Caldast.AlgoLife.DesignPatterns.csproj
@@ -71,13 +71,13 @@
     <Compile Include="MVC\IFlightView.cs" />
     <Compile Include="MVC\ILocationObserver.cs" />
     <Compile Include="MVC\ISpeedObserver.cs" />
-    <Compile Include="ObserverPattern\CurrentConditionsDisplay.cs" />
+    <Compile Include="ObserverPattern\CurrentConditionsDisplayObserver.cs" />
     <Compile Include="ObserverPattern\IDisplay.cs" />
-    <Compile Include="ObserverPattern\IWeather.cs" />
+    <Compile Include="ObserverPattern\IWeatherSubject.cs" />
     <Compile Include="ObserverPattern\IWeatherObserver.cs" />
-    <Compile Include="ObserverPattern\SimpleForecastDisplay.cs" />
-    <Compile Include="ObserverPattern\WeatherData.cs" />
-    <Compile Include="ObserverPattern\WeatherStatisticsDisplay.cs" />
+    <Compile Include="ObserverPattern\SimpleForecastDisplayObserver.cs" />
+    <Compile Include="ObserverPattern\WeatherDataSubject.cs" />
+    <Compile Include="ObserverPattern\WeatherStatisticsDisplayObserver.cs" />
     <Compile Include="IteratorPattern\BreakfastMenu.cs" />
     <Compile Include="IteratorPattern\BreakfastMenuIterator.cs" />
     <Compile Include="IteratorPattern\DinnerMenu.cs" />
