--- a/Caldast.AlgoLife.UnitTests/Caldast.AlgoLife.UnitTests.csproj
+++ b/Caldast.AlgoLife.UnitTests/Caldast.AlgoLife.UnitTests.csproj
@@ -39,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentAssertions, Version=5.6.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentAssertions.5.6.0\lib\net47\FluentAssertions.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.2.1\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
@@ -47,15 +50,20 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arrays\ArrayProblemsTests.cs" />
+    <Compile Include="Arrays\MyArrayListTests.cs" />
     <Compile Include="DynamicProgramming\CoinChangeTests.cs" />
     <Compile Include="DynamicProgramming\CutRodTests.cs" />
     <Compile Include="DynamicProgramming\KnapSackTests.cs" />
     <Compile Include="DynamicProgramming\LongestCommonSubSequenceTests.cs" />
     <Compile Include="DynamicProgramming\LongestIncreasingSubsequenceTests.cs" />
     <Compile Include="GraphUnitTests.cs" />
+    <Compile Include="Graph\Kruskal\KruskalMSTTests.cs" />
+    <Compile Include="Graph\NetworkDelayTimeTests.cs" />
     <Compile Include="MyQueueTests.cs" />
     <Compile Include="MyStackTests.cs" />
     <Compile Include="NumberProblems.cs" />
